class 2:finished i learned tags <p></p> and <br>

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro exercicio</title>
+    <title>Parágrafos</title>
 </head>
 <body>
-    <h1><strong>Olá mundo</h1>
-        <hr>
-        <p>este é o meu primeiro documento HTML! I AM VERY HAPPY!</p>
+<h1>Parágrafos e quebras de linhas</h1>
+<hr>
+<p>Você pode escrever um 
+    parágrafo de qualquer 
+    jeito, basta colocar no 
+    meio das tags &lt;p&gt; e &lt;/p&gt;</p>
 
-        <p>Este é um momento unico estou criando um site</p>
+    <p>Se Precisar quebrar o texto em algum lugar específico <br> como esse, basta colocar a tag &lt;br&gt;.</p>
 </body>
 </html>
