class 3 simbolos and emoji

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
 <p>Você pode escrever um 
     parágrafo de qualquer 
     jeito, basta colocar no 
-    meio das tags &lt;p&gt; e &lt;/p&gt;</p>
+    meio das tags &lt;p&gt; e &lt;/p&gt;<!--Comentario--></p>
 
-    <p>Se Precisar quebrar o texto em algum lugar específico <br> como esse, basta colocar a tag &lt;br&gt;.</p>
+    <p>Se Precisar quebrar o texto em algum lugar específico <br>como esse, basta colocar a tag &lt;br&gt;.</p>
+
+    <p>Vamos adicionar alguns simbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+        &uparrow;
+        &uarr;
+    </p>
+
+    <p>vamos adicionar alguns emoji:
+        &#x1F596;
+        &#x1F978;
+    </p>
 </body>
 </html>
