Class 4: tags Img como colocar img png, jpg, e por URL

--- a/index.html
+++ b/index.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parágrafos</title>
+    <title>Teste com imagens</title>
 </head>
 <body>
-<h1>Parágrafos e quebras de linhas</h1>
-<hr>
-<p>Você pode escrever um 
-    parágrafo de qualquer 
-    jeito, basta colocar no 
-    meio das tags &lt;p&gt; e &lt;/p&gt;<!--Comentario--></p>
+    <h1>testando carga e imagens</h1>
 
-    <p>Se Precisar quebrar o texto em algum lugar específico <br>como esse, basta colocar a tag &lt;br&gt;.</p>
+<p>abaixo voce vai ver uma imagem que esta na mesma pasta.</p>
 
-    <p>Vamos adicionar alguns simbolos especiais:
-        &reg;
-        &copy;
-        &trade;
-        &euro;
-        &pound;
-        &yen;
-        &cent;
-        &Delta;
-        &uparrow;
-        &uarr;
-    </p>
+<img src="logo-html.png" alt="Logo HTML5">
+<p>podemos também carregar imagens que estao em sub-pastas.</p>
+<img src="imagens/logo-css.PNG" alt="Logo CSS3">
 
-    <p>vamos adicionar alguns emoji:
-        &#x1F596;
-        &#x1F978;
-    </p>
+<p>também podemos carregar imagens externas</p>
+
+<img src="https://cdn.iconscout.com/icon/free/png-512/free-javascript-logo-icon-download-in-svg-png-gif-file-formats--programming-language-pack-logos-icons-1174950.png?f=webp&w=256" alt="lang javaScript"> <!--URL-->
 </body>
 </html>
