--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste com imagens</title>
+
+<link rel="shortcut icon" href="consertos-trevisan.ico" type="image/x-icon">
+    <title>Teste de Favicom</title>
 </head>
 <body>
-    <h1>testando carga e imagens</h1>
-
-<p>abaixo voce vai ver uma imagem que esta na mesma pasta.</p>
-
-<img src="logo-html.png" alt="Logo HTML5">
-<p>podemos também carregar imagens que estao em sub-pastas.</p>
-<img src="imagens/logo-css.PNG" alt="Logo CSS3">
-
-<p>também podemos carregar imagens externas</p>
-
-<img src="https://cdn.iconscout.com/icon/free/png-512/free-javascript-logo-icon-download-in-svg-png-gif-file-formats--programming-language-pack-logos-icons-1174950.png?f=webp&w=256" alt="lang javaScript"> <!--URL-->
+    <h1>Olha o favicon aqui em cima</h1>
 </body>
 </html>
