class7: aula sobre semântica HTML5 = SEMANTICO também aprendemos sobre as tags utrapassadas(nao utilizar)

--- a/index.html
+++ b/index.html
@@ -3,34 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/consertos-trevisan.ico" type="image/x-icon">
-    <title>Hierarquia de Títulos</title>
+<link rel="shortcut icon" href="imagens/consertos-trevisan.ico" type="image/x-icon">
+
+    <title>Semântica</title>
+<style>
+body {
+background-color: rgb(38, 196, 196)
+
+}
+
+</style>
+
 </head>
 <body>
-    <h1>Entendendo Portugal</h1>
-    <h2>Introdução</h2>
-    <h3>Justificação da temática</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis possimus odit magni suscipit nostrum. Sed natus error repellat, tenetur doloribus animi assumenda commodi quidem maiores asperiores necessitatibus unde officiis modi.</p>
+    <h1>HTML = significado semantica</h1>
+    <h2>HTML5 se foca em semantica = significado!</h2> 
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam fugiat saepe vitae veritatis ullam autem explicabo nostrum, animi sit neque quibusdam quod esse aut provident reprehenderit recusandae itaque eos optio?</p>
 
-    <h3>Carater excecional do caso de estudo</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla dolore asperiores ducimus dolorum assumenda numquam architecto! Eligendi perferendis magni porro, perspiciatis placeat, sapiente, aspernatur eveniet maiores sit nam distinctio officiis.</p>
-
-    <h3>perguntas de partida e objetivos de investigação</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi possimus officiis, nulla nesciunt molestiae libero at ratione dolore illo minus ad, maiores, enim a expedita deleniti perferendis illum aliquam consequatur.</p>
-
-    <h3>Metodologia de investigação</h3>
-    <h4>Etepas de investigação</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem expedita quo aliquam neque at consequatur mollitia eligendi est, cum, voluptatem in debitis repellendus nostrum sit dolor, necessitatibus delectus vel quam?</p>
-
-    <h4>Instrumentos de análise e fontes de informação</h4>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci tenetur, necessitatibus eius quaerat delectus sunt, repellendus animi nam rem corporis quo facilis consequatur, repudiandae fuga neque fugiat praesentium optio nulla.</p>
-
-    <h2>Ordenamento do território em portugal</h2>
-    <h3>Os instrumentos de gestão do território</h3>
-    <h4>Os instrumentos de planeamento territorial</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit commodi, harum voluptate, qui illo rem nulla quibusdam sed temporibus omnis labore tenetur aut numquam ratione sapiente? Accusamus amet corrupti accusantium.</p>
-
-    <h4>Os regimes territoriais especiais</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nam, beatae, inventore rem blanditiis fugit sint, eaque praesentium reiciendis eius error perspiciatis in maxime magnam vero cum dignissimos facere recusandae?</p>
-
+<h1>CSS3 = Estilo e Forma</h1>
+    <h2>Stylo e Forma</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae quis, porro officiis vel totam beatae voluptates facere molestiae distinctio expedita, doloremque aut! Minus facere iste quia vero inventore illum recusandae.</p>
+    
+</body>
 </html>
