--- a/index.html
+++ b/index.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="imagens/consertos-trevisan.ico" type="image/x-icon">
-
-    <title>Semântica</title>
-<style>
-body {
-background-color: rgb(38, 196, 196)
-
-}
-
-</style>
-
+    <title>Formatações de texto</title>
 </head>
 <body>
-    <h1>HTML = significado semantica</h1>
-    <h2>HTML5 se foca em semantica = significado!</h2> 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam fugiat saepe vitae veritatis ullam autem explicabo nostrum, animi sit neque quibusdam quod esse aut provident reprehenderit recusandae itaque eos optio?</p>
+    <h1>Principais Formatações</h1>
+    <h2>Negrito / Destaque</h2>
+    <p>Nesta Frase temos um <b>termo em negrito</b> usado com a tag B(não semântica)</p>
 
-<h1>CSS3 = Estilo e Forma</h1>
-    <h2>Stylo e Forma</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae quis, porro officiis vel totam beatae voluptates facere molestiae distinctio expedita, doloremque aut! Minus facere iste quia vero inventore illum recusandae.</p>
-    
+    <p>Nesta frase temos um <strong>termo em destaque</strong> usando a tag STRONG(SEMANTICA) </p>
+
+    <h2>Itálico / Ênfase</h2>
+    <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag I (Não semantica).</p>
+
+    <p>Nesta frase temos um <em>termo em ênfase</em> usando a tag EM (Semântica)</p>
+
 </body>
 </html>
