class 8.2: aprendemos mais tags semanticas e nao semanticas

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formatações de texto</title>
+
+    <style>
+        mark {
+            background-color: lime;
+        }
+    </style>
+
 </head>
 <body>
     <h1>Principais Formatações</h1>
@@ -16,6 +23,29 @@
     <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag I (Não semantica).</p>
 
     <p>Nesta frase temos um <em>termo em ênfase</em> usando a tag EM (Semântica)</p>
+
+    <h2>texto marcado</h2>
+    <p>podemos criar tambem <mark>um texto marcado</mark> usando a tag MARK</p>
+
+    <p>E no outro parágrafo temos <mark>Outro texto marcado</mark> no final</p>
+
+    <h2>Texto grande e Texto Pequeno</h2>
+
+    <p>estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo (tag <del>BIG</del>) e (small = SEMANATICA)</p>
+
+    <h2>Texto deletado</h2>
+    <p>Podemos marcar um <del>texto excluido</del> para indicar que ele deve ser lido, mas não considerado. (tag del)</p>
+
+    <h2>Texto inserido</h2>
+    <p>Podemos criar um <ins>texto como inserido</ins> para dar uma enfase e indicar que ele foi adicionado depois(tag ins SEMANTICA)</p>
+
+    <p>existe tambem o <u>sublinhado</u> com a tag U(Nao semantica)</p>
+
+<h2>Texto sobrescrito</h2>
+<p>Para inserir coisas do tipo x<sup>20</sup>+3 (Com a tag sup)</p>
+
+<h2>Texto subscrito</h2>
+<p>Para inserir coisas do tipo H<sub>2</sub>O (com a Tag sub)</p>
 
 </body>
 </html>
