Class8.9: finalizando tags

--- a/index.html
+++ b/index.html
@@ -3,49 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formatações de texto</title>
-
-    <style>
-        mark {
-            background-color: lime;
-        }
-    </style>
-
+    <title>Outras Formataçoes</title>
 </head>
 <body>
-    <h1>Principais Formatações</h1>
-    <h2>Negrito / Destaque</h2>
-    <p>Nesta Frase temos um <b>termo em negrito</b> usado com a tag B(não semântica)</p>
+    
+<h1>Outras Formatações</h1>
+<h2>Código-fonte / pré-formatado</h2>
+<p>o comando <code>document.getElementById('teste')</code> é escrito em linguagem JavaScript (tag code= tag para ler codigos)</p>
 
-    <p>Nesta frase temos um <strong>termo em destaque</strong> usando a tag STRONG(SEMANTICA) </p>
+<pre>
+    <code> <!--TAG CODE para escrever codigos-->
+num = int(input('digite um número'))
+if num % 2 == 0:
+print(f'O numero{num}é PAR')
+else:
+print (f'O numero {num}é IMPAR')
+print('fim do programa')
+    </code>
+</pre> <!--TAG PRE para alinhar-->
 
-    <h2>Itálico / Ênfase</h2>
-    <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag I (Não semantica).</p>
+<h2>Citações</h2><!--citar fala com a tag q para aspas-->
+<p>Como diria o pai de um amigo: <q>o computador é um burro muito rápido</q></p>
 
-    <p>Nesta frase temos um <em>termo em ênfase</em> usando a tag EM (Semântica)</p>
+<h2>citaçoes completas</h2>
 
-    <h2>texto marcado</h2>
-    <p>podemos criar tambem <mark>um texto marcado</mark> usando a tag MARK</p>
+<p>Segundo Jeff Noble</p>
+<!--blockquote = para citaçoes completas e colocar o link das citação para aparecer nos mecanismos de busca do google entre outros..-->
+<blockquote cite="https://books.google.com.br/books/about/HTML_XHTML_e_CSS_Para_Leigos.html?id=E8ZtDwAAQBAJ&redir_esc=y">
+A diferença entre elementos inline e um bloco de texto é importante. Os elementos html neste capitulo descrevem os blocos de texto.
+</blockquote>
 
-    <p>E no outro parágrafo temos <mark>Outro texto marcado</mark> no final</p>
+<h2>abreviações</h2> <!--tag abbr para marcar o nome da tag quando passar o mouse por cima-->
+<p>Estou estudando <abbr title="HyperText Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. Estou atorando!</p>
 
-    <h2>Texto grande e Texto Pequeno</h2>
-
-    <p>estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo (tag <del>BIG</del>) e (small = SEMANATICA)</p>
-
-    <h2>Texto deletado</h2>
-    <p>Podemos marcar um <del>texto excluido</del> para indicar que ele deve ser lido, mas não considerado. (tag del)</p>
-
-    <h2>Texto inserido</h2>
-    <p>Podemos criar um <ins>texto como inserido</ins> para dar uma enfase e indicar que ele foi adicionado depois(tag ins SEMANTICA)</p>
-
-    <p>existe tambem o <u>sublinhado</u> com a tag U(Nao semantica)</p>
-
-<h2>Texto sobrescrito</h2>
-<p>Para inserir coisas do tipo x<sup>20</sup>+3 (Com a tag sup)</p>
-
-<h2>Texto subscrito</h2>
-<p>Para inserir coisas do tipo H<sub>2</sub>O (com a Tag sub)</p>
+<h2>texto invertido</h2> <!--COM A TAG BDO faço um texto invertido-->
+<p><bdo dir="rtl">Estou Aprendendo a criar coisas em HTML.</bdo></p>
 
 </body>
 </html>
