--- a/index.html
+++ b/index.html
@@ -3,41 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outras Formataçoes</title>
+    <title>Listas</title>
 </head>
 <body>
-    
-<h1>Outras Formatações</h1>
-<h2>Código-fonte / pré-formatado</h2>
-<p>o comando <code>document.getElementById('teste')</code> é escrito em linguagem JavaScript (tag code= tag para ler codigos)</p>
+   <h1>Trabalhando com Listas</h1>
+   <h2>Listas Ordenadas</h2> <!--TAMBEM Funciona com 
+   A,a= alfabeto
+   I,i= Numeros Romanos-->
+   <ol type="1" start="1">
+    <li>acordar
+    <li>Ligar para o joao
+    <li>tomar café
+    <li>escovar os dentes
+    <li>Ir para faculdade
+    <li>Almoçar
+    <li>Ir para o Trabalho
+    <li>Voltar para casa
+    <li>Jantar
+    <li>Dormir
+   </ol>
 
-<pre>
-    <code> <!--TAG CODE para escrever codigos-->
-num = int(input('digite um número'))
-if num % 2 == 0:
-print(f'O numero{num}é PAR')
-else:
-print (f'O numero {num}é IMPAR')
-print('fim do programa')
-    </code>
-</pre> <!--TAG PRE para alinhar-->
+   <h2>Listas nao Ordenadas</h2>
+<ul type="disc"><!--tipos disc, circle, square-->
+    <li>Pão
+    <li>Leite
+    <li>Tomate
+    <li>Alface
+    <li>Manteiga
+    <li>Arroz
+    <li>Feijão
+    <li>
+    <li>
+    <li>
+    <li>
+    <li>
+    <li>
 
-<h2>Citações</h2><!--citar fala com a tag q para aspas-->
-<p>Como diria o pai de um amigo: <q>o computador é um burro muito rápido</q></p>
-
-<h2>citaçoes completas</h2>
-
-<p>Segundo Jeff Noble</p>
-<!--blockquote = para citaçoes completas e colocar o link das citação para aparecer nos mecanismos de busca do google entre outros..-->
-<blockquote cite="https://books.google.com.br/books/about/HTML_XHTML_e_CSS_Para_Leigos.html?id=E8ZtDwAAQBAJ&redir_esc=y">
-A diferença entre elementos inline e um bloco de texto é importante. Os elementos html neste capitulo descrevem os blocos de texto.
-</blockquote>
-
-<h2>abreviações</h2> <!--tag abbr para marcar o nome da tag quando passar o mouse por cima-->
-<p>Estou estudando <abbr title="HyperText Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. Estou atorando!</p>
-
-<h2>texto invertido</h2> <!--COM A TAG BDO faço um texto invertido-->
-<p><bdo dir="rtl">Estou Aprendendo a criar coisas em HTML.</bdo></p>
-
+</ul>
 </body>
 </html>
