--- a/index.html
+++ b/index.html
@@ -32,13 +32,76 @@
     <li>Manteiga
     <li>Arroz
     <li>Feijão
-    <li>
-    <li>
-    <li>
-    <li>
-    <li>
-    <li>
-
 </ul>
+
+<h2>minhas linguagens favoritas</h2>
+<ol>
+    <li>Antigas
+<ol type="a">
+    <li>clipper
+    <li>Visual Basic
+    <li>Fortran
+    <li>Delphi
+    </ol>
+<li>Novas
+<ol type="a" start="5"> <!--Funciona start numerico se colocar para iniciar no e nao vai funcionar-->
+    <li>PHP
+    <li>Python
+    <li>JavaScript
+    <li>Kotlin
+</ol>
+</ol>
+
+<h2>Meus jogos favoritos</h2>
+<ol>
+        <li>Super Nintendo
+<ul type="square">
+        <li>Super Mário World
+            <ul type="circle">
+                <li>mais de 10.000Horas</li>
+            </ul>
+        <li>Donkey Kong
+        <li>Final Fighter
+        <li>SparkSter
+        <li>Mikey e Donald
+        <li>Chrono Tiger
+</ul>
+        <li>PlayStation 1
+<ul type="square">
+        <li>Ace Combat
+        <li>YU GI OH
+        <li>Road Rash
+        <li>Crash
+        <li>Drive
+        <li>Twister the Metal
+        <li>Vigilante 8
+        <li>Pescaria
+</ul>
+        <li>PlayStation 2
+<ul type="square">
+        <li> GTA San Andreas
+        <li> Bomba PACH
+        <li> Emulador Games
+        <li> Need For Speed
+       
+    </ul>
+</ol>
+
+<h2>Lista de Definiçoes</h2>
+<dl>
+    <dt>Termo:</dt>
+    <dd>Descrição</dd>
+
+<li>Exemplos:</li>
+
+    <dt>HTML</dt>
+    <dd>Linguagem de marcação para a criação de conteudo de um  site.</dd>
+
+    <dt>CSS</dt>
+    <dd>Linguagem de marcação para a criação do design de um site</dd>
+
+    <dt>JavaScript</dt>
+    <dd>Linguagem de programação para a criação de interatividade de um site.</dd>
+</dl>
 </body>
 </html>
