Class 10: Como usar links Externos no seu site

--- a/index.html
+++ b/index.html
@@ -3,105 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listas</title>
+    <title>Trabalhando com links</title>
 </head>
 <body>
-   <h1>Trabalhando com Listas</h1>
-   <h2>Listas Ordenadas</h2> <!--TAMBEM Funciona com 
-   A,a= alfabeto
-   I,i= Numeros Romanos-->
-   <ol type="1" start="1">
-    <li>acordar
-    <li>Ligar para o joao
-    <li>tomar café
-    <li>escovar os dentes
-    <li>Ir para faculdade
-    <li>Almoçar
-    <li>Ir para o Trabalho
-    <li>Voltar para casa
-    <li>Jantar
-    <li>Dormir
-   </ol>
+    
+<h1>Usando links externos</h1> <!--TAG <a href="SITE" target="_blank"-->
+<p>Você pode acessar o meu <a href="https://github.com/webertrevisan/project-guanabara-exc001/commits/main/" target="_blank" rel="external">repositório público no GitHub</a></p>
 
-   <h2>Listas nao Ordenadas</h2>
-<ul type="disc"><!--tipos disc, circle, square-->
-    <li>Pão
-    <li>Leite
-    <li>Tomate
-    <li>Alface
-    <li>Manteiga
-    <li>Arroz
-    <li>Feijão
-</ul>
+<!--Colocar as tags _black para sites externos-->
 
-<h2>minhas linguagens favoritas</h2>
-<ol>
-    <li>Antigas
-<ol type="a">
-    <li>clipper
-    <li>Visual Basic
-    <li>Fortran
-    <li>Delphi
-    </ol>
-<li>Novas
-<ol type="a" start="5"> <!--Funciona start numerico se colocar para iniciar no e nao vai funcionar-->
-    <li>PHP
-    <li>Python
-    <li>JavaScript
-    <li>Kotlin
-</ol>
-</ol>
-
-<h2>Meus jogos favoritos</h2>
-<ol>
-        <li>Super Nintendo
-<ul type="square">
-        <li>Super Mário World
-            <ul type="circle">
-                <li>mais de 10.000Horas</li>
-            </ul>
-        <li>Donkey Kong
-        <li>Final Fighter
-        <li>SparkSter
-        <li>Mikey e Donald
-        <li>Chrono Tiger
-</ul>
-        <li>PlayStation 1
-<ul type="square">
-        <li>Ace Combat
-        <li>YU GI OH
-        <li>Road Rash
-        <li>Crash
-        <li>Drive
-        <li>Twister the Metal
-        <li>Vigilante 8
-        <li>Pescaria
-</ul>
-        <li>PlayStation 2
-<ul type="square">
-        <li> GTA San Andreas
-        <li> Bomba PACH
-        <li> Emulador Games
-        <li> Need For Speed
-       
-    </ul>
-</ol>
-
-<h2>Lista de Definiçoes</h2>
-<dl>
-    <dt>Termo:</dt>
-    <dd>Descrição</dd>
-
-<li>Exemplos:</li>
-
-    <dt>HTML</dt>
-    <dd>Linguagem de marcação para a criação de conteudo de um  site.</dd>
-
-    <dt>CSS</dt>
-    <dd>Linguagem de marcação para a criação do design de um site</dd>
-
-    <dt>JavaScript</dt>
-    <dd>Linguagem de programação para a criação de interatividade de um site.</dd>
-</dl>
+<p>voce tambem pode acessar o meu <a href="https://www.youtube.com/@EbimeSami" target="_blank" rel="external">Canal do Youtube</a></p>
 </body>
 </html>
