class 10.2: Links internos e links em pastas

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
 <!--Colocar as tags _black para sites externos-->
 
 <p>voce tambem pode acessar o meu <a href="https://www.youtube.com/@EbimeSami" target="_blank" rel="external">Canal do Youtube</a></p>
+
+<h2>Usando links Internos</h2>
+<p>Esta é a minha primeira página do site. se voce quiser, pode acessar também a minha <a href="./pag002.html" target="_self" rel="next">segunda página</a></p>
+
+<p>Voce também pode acessar a minha <a href="noticias/pag003.html" target="_self" rel="next">terceira página</a> de notícias</p>
+
 </body>
 </html>
