--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalhando com links</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Trabalhando com links</title>
 </head>
+
 <body>
-    
-<h1>Usando links externos</h1> <!--TAG <a href="SITE" target="_blank"-->
-<p>Você pode acessar o meu <a href="https://github.com/webertrevisan/project-guanabara-exc001/commits/main/" target="_blank" rel="external">repositório público no GitHub</a></p>
 
-<!--Colocar as tags _black para sites externos-->
+        <h1>Usando links externos</h1> <!--TAG <a href="SITE" target="_blank"-->
+        <p>Você pode acessar o meu <a href="https://github.com/webertrevisan/project-guanabara-exc001/commits/main/"
+                        target="_blank" rel="external">repositório público no GitHub</a></p>
 
-<p>voce tambem pode acessar o meu <a href="https://www.youtube.com/@EbimeSami" target="_blank" rel="external">Canal do Youtube</a></p>
+        <!--Colocar as tags _black para sites externos-->
 
-<h2>Usando links Internos</h2>
-<p>Esta é a minha primeira página do site. se voce quiser, pode acessar também a minha <a href="./pag002.html" target="_self" rel="next">segunda página</a></p>
+        <p>voce tambem pode acessar o meu <a href="https://www.youtube.com/@EbimeSami" target="_blank"
+                        rel="external">Canal
+                        do Youtube</a></p>
 
-<p>Voce também pode acessar a minha <a href="noticias/pag003.html" target="_self" rel="next">terceira página</a> de notícias</p>
+        <h2>Usando links Internos</h2>
+        <p>Esta é a minha primeira página do site. se voce quiser, pode acessar também a minha <a href="./pag002.html"
+                        target="_self" rel="next">segunda página</a></p>
 
+        <p>Voce também pode acessar a minha <a href="noticias/pag003.html" target="_self" rel="next">terceira página</a>
+                de
+                notícias</p>
+
+                <h1>Links para download</h1>
+                <ul>
+                        <li><a href="livro/MAPADEV-2023.pdf" download="MAPADEV-2023" type="application/pdf">Baixar o livro em PDF</a></li>
+                        <li><a href="livro/MAPADEV-2023.rar" download="MAPADEV-2023.rar" type="application/rar ">Livro compactado em ZIP</a></li>
+                </ul>
 </body>
-</html>
+
+</html> 
